Resten af sider, farver på nav, et nyt one-page grid system, som er flexibel i forhold til Grid og varieret indhold

--- a/evolutionsteorienGeo.html
+++ b/evolutionsteorienGeo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stevns Klint</title>
+    <title>Fossiler og evolutionsteorien</title>
     <meta name="description" content="Det er smukt på Stevns Klint og tættere på end du tror. Læs mere her" />
     <meta name="keywords" content="Fossiljagt, undervisning  i naturgeografi og biologi, Stevns Klint, UNESCO Verdensarv, Kalklandet" />
     <meta name="author" content="Charlotte Fuchs" />
@@ -15,39 +15,6 @@
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <style>
-        /* intern nav */
-        .page-nav {
-            background-color: #628ca1;
-            margin-top: -5px;
-        }
-
-
-        .page-nav a.active {
-            background-color: #ec7f44;
-            color: #FFF;
-            cursor: default;
-        }
-
-        .page-nav a:hover {
-
-            background-color: #317793;
-            color: #FFF;
-
-        }
-
-        .page-nav ul li a {
-
-            text-decoration: none;
-            padding: inherit;
-            color: #ec7f44;
-            width: inherit;
-            padding: 0 10px;
-            padding-bottom: 0px;
-            padding-bottom: 0px;
-            padding-bottom: 10px;
-
-        }
-
         .link_white {
             color: #FFF;
 
@@ -301,6 +268,7 @@
                 text-align: center;
             }
         }
+
     </style>
 </head>
 
@@ -515,12 +483,15 @@
                 dest.appendChild(klon);
             });
         }
+
     </script>
     <script src="js/classie.js"></script>
     <script src="js/myMenu.js"></script>
     <script>
         new myMenu(document.getElementById('menu'));
+
     </script>
 
 </body>
+
 </html>
