--- a/geoFossiljagt.html
+++ b/geoFossiljagt.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stevns Klint</title>
-    <meta name="description" content="Det er smukt på Stevns Klint og tættere på end du tror. Læs mere her" />
+    <title>Fossilerjagt HF og STX</title>
+    <meta name="description" content="Fossiljagt HF og STX. Undervisning for skoler på Geomuseum Faxe Læs mere her" />
     <meta name="keywords" content="Fossiljagt, undervisning  i naturgeografi og biologi, Stevns Klint, UNESCO Verdensarv, Kalklandet" />
     <meta name="author" content="Charlotte Fuchs" />
 
@@ -16,47 +16,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <style>
         /* intern nav */
-        /* styles for UNDERSIDER */
-
-        .page-nav {
-        width: 100%;
-        background-color: #089ec6;
-        font-size: 18px;
-        margin-top: -5px;
-        }
-        .page-nav a:hover {
-
-        background-color: #008eb9;
-        color: #FFF;
-        padding-top: 22px;
-        }
-        .page-nav a:fokus {
-        background-color: #008eb9;
-        color: #FFF;
-        padding-top: 22px;
-        }
-        .page-nav a:hover-within {
-        background-color: #008eb9;
-        color: #FFF;
-        padding-top: 22px;
-        }
-
-        /* [ON SMALL SCREENS] */
-        @media screen and (max-width: 768px){
-        /* Show Hamburger */
-        .page-nav a.active {
-        background-color: #008eb9;
-        color: #ec7f44;
-        padding-top: 10px;
-        }
-        .page-nav ul li a:hover {
-        display: inline-block;
-        padding: 0px;
-        margin: 0;
-        }
-        }
-}
-
         .link_white {
             color: #FFF;
 
@@ -123,18 +82,20 @@
         }
 
         div.pagesGrid-item:nth-child(4) {
-            grid-column: 1 / 3;
+            grid-column: 1 / 6;
             grid-row: 4/ 5;
+            text-align: center
         }
 
         div.pagesGrid-item:nth-child(5) {
-            grid-column: 3/ 6;
-            grid-row: 4/ 5;
+            grid-column: 1/ 3;
+            grid-row: 5/ 6;
         }
 
         div.pagesGrid-item:nth-child(6) {
-            grid-column: 1/ 6;
+            grid-column: 3/ 6;
             grid-row: 5/ 6;
+            border-left: none;
         }
 
         div.pagesGrid-item:nth-child(7) {
@@ -161,10 +122,6 @@
         /* pagesGrid max 809px*/
         @media screen and (max-width: 809px) {
 
-            /*  .footerFloat ul {
-    text-align: center;
-    padding: 0;
-}*/
             div.splashHeader img {
                 width: 100%;
                 max-height: 500px;
@@ -184,39 +141,40 @@
             }
 
             div.pagesGrid-item:nth-child(1) {
-                grid-column: 1 / 7;
+                grid-column: 1 / 3;
                 grid-row: span 1;
                 width: 100%;
             }
 
             div.pagesGrid-item:nth-child(2) {
-                grid-column: 1 / 7;
+                grid-column: 1 / 3;
                 grid-row: span 1;
                 width: 100%;
             }
 
             div.pagesGrid-item:nth-child(3) {
-                grid-column: 1 /7;
+                grid-column: 1 /3;
                 grid-row: span 1;
             }
 
             div.pagesGrid-item:nth-child(4) {
-                grid-column: 1/ 2;
+                grid-column: 1/ 3;
                 grid-row: span 1;
+                margin: 0 auto;
             }
 
             div.pagesGrid-item:nth-child(5) {
-                grid-column: 2 / 3;
+                grid-column: 1 / 3;
                 grid-row: span 1;
-                text-align: center;
+                text-align: left;
                 border-left: none;
             }
 
             div.pagesGrid-item:nth-child(6) {
-                grid-column: 1 / 7;
+                grid-column: 1 / 3;
                 grid-row: span 1;
                 border-left: none;
-                text-align: center;
+                text-align: left;
             }
 
             div.pagesGrid-item:nth-child(7) {
@@ -490,7 +448,7 @@
         }
 
         async function hentJson1() {
-            let url = "http://medicinolie.dk/kalklandet/wordpress/wp-json/wp/v2/kalklandet/126";
+            let url = "http://medicinolie.dk/kalklandet/wordpress/wp-json/wp/v2/fossiljagt/260";
             let jsonData = await fetch(url);
             indhold = await jsonData.json();
             console.log(indhold);
@@ -532,4 +490,5 @@
         new myMenu(document.getElementById('menu'));
     </script>
 
-</body></html>
+</body>
+</html>
