--- a/stevns_naturcenter.html
+++ b/stevns_naturcenter.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stevns Klint</title>
-    <meta name="description" content="Det er smukt på Stevns Klint og tættere på end du tror. Læs mere her" />
-    <meta name="keywords" content="Fossiljagt, undervisning  i naturgeografi og biologi, Stevns Klint, UNESCO Verdensarv, Kalklandet" />
+    <title>Stevns Naturcenter</title>
+    <meta name="description" content="Stevns Naturcenter. Stevns Klint er en del af UNESCO's verdensarv. Besøg vores fantastiske natur i dag. Læs mere her" />
+    <meta name="keywords" content="Stevns Naturcenter, Fossiljagt, Stevns Klint, UNESCO Verdensarv, Kalklandet, fugleliv, unik natur" />
     <meta name="author" content="Charlotte Fuchs" />
 
     <link rel="stylesheet" type="text/css" href="css/grid.css" />
@@ -15,47 +15,89 @@
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <style>
-        /* intern nav */
         /* styles for UNDERSIDER */
 
         .page-nav {
-        width: 100%;
-        background-color: #089ec6;
-        font-size: 18px;
-        margin-top: -5px;
+            width: 100%;
+            background-color: #a4d063;
+            font-size: 18px;
+            margin-top: -5px;
         }
+
+        /* Hide Hamburger */
+        .page-nav ul li a {
+            text-decoration: none;
+            padding: inherit;
+            color: #796d65;
+            width: inherit;
+            padding: 10px;
+        }
+
         .page-nav a:hover {
 
-        background-color: #008eb9;
-        color: #FFF;
-        padding-top: 22px;
+            background-color: #8cc63e;
+            color: #FFF;
+            padding-top: 22px;
         }
+
         .page-nav a:fokus {
-        background-color: #008eb9;
-        color: #FFF;
-        padding-top: 22px;
+            background-color: #8cc63e;
+            color: #FFF;
+            padding-top: 22px;
         }
+
         .page-nav a:hover-within {
-        background-color: #008eb9;
-        color: #FFF;
-        padding-top: 22px;
+            background-color: #8cc63e;
+            color: #FFF;
+            padding-top: 22px;
+        }
+
+        .page-nav a.active {
+
+            background-color: #fff;
+            color: #ec7f44;
+            cursor: default;
+            padding: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-top: 21px;
+            padding-bottom: 11px;
+
         }
 
         /* [ON SMALL SCREENS] */
-        @media screen and (max-width: 768px){
-        /* Show Hamburger */
-        .page-nav a.active {
-        background-color: #008eb9;
-        color: #ec7f44;
-        padding-top: 10px;
+        @media screen and (max-width: 768px) {
+
+            /* Show Hamburger */
+            .page-nav label {
+                display: inline-block;
+                color: #fff;
+                background: #e67c42;
+                font-style: normal;
+                font-size: 1.2em;
+                padding: 10px;
+            }
+
+            .page-nav ul li {
+
+                border-top: 1px solid #b3aa87;
+                width: 100%;
+                padding: 11px;
+
+            }
+
+            .page-nav a.active {
+                background-color: #8cc63e;
+                color: #ec7f44;
+                padding-top: 10px;
+            }
+
+            .page-nav ul li a:hover {
+                display: inline-block;
+                padding: 0px;
+                margin: 0;
+            }
         }
-        .page-nav ul li a:hover {
-        display: inline-block;
-        padding: 0px;
-        margin: 0;
-        }
-        }
-}
 
         .link_white {
             color: #FFF;
@@ -123,18 +165,20 @@
         }
 
         div.pagesGrid-item:nth-child(4) {
-            grid-column: 1 / 3;
+            grid-column: 1 / 6;
             grid-row: 4/ 5;
+            text-align: left;
         }
 
         div.pagesGrid-item:nth-child(5) {
-            grid-column: 3/ 6;
-            grid-row: 4/ 5;
+            grid-column: 1/ 3;
+            grid-row: 5/ 6;
         }
 
         div.pagesGrid-item:nth-child(6) {
-            grid-column: 1/ 6;
+            grid-column: 3/ 6;
             grid-row: 5/ 6;
+            border-left: none;
         }
 
         div.pagesGrid-item:nth-child(7) {
@@ -161,10 +205,6 @@
         /* pagesGrid max 809px*/
         @media screen and (max-width: 809px) {
 
-            /*  .footerFloat ul {
-    text-align: center;
-    padding: 0;
-}*/
             div.splashHeader img {
                 width: 100%;
                 max-height: 500px;
@@ -184,39 +224,41 @@
             }
 
             div.pagesGrid-item:nth-child(1) {
-                grid-column: 1 / 7;
+                grid-column: 1 / 3;
                 grid-row: span 1;
                 width: 100%;
             }
 
             div.pagesGrid-item:nth-child(2) {
-                grid-column: 1 / 7;
+                grid-column: 1 / 3;
                 grid-row: span 1;
                 width: 100%;
             }
 
             div.pagesGrid-item:nth-child(3) {
-                grid-column: 1 /7;
+                grid-column: 1 /3;
                 grid-row: span 1;
             }
 
             div.pagesGrid-item:nth-child(4) {
-                grid-column: 1/ 2;
+                grid-column: 1/ 3;
                 grid-row: span 1;
+                margin: 0 auto;
+                padding: 0;
             }
 
             div.pagesGrid-item:nth-child(5) {
-                grid-column: 2 / 3;
+                grid-column: 1 / 3;
                 grid-row: span 1;
-                text-align: center;
+                text-align: left;
                 border-left: none;
             }
 
             div.pagesGrid-item:nth-child(6) {
-                grid-column: 1 / 7;
+                grid-column: 1 / 3;
                 grid-row: span 1;
                 border-left: none;
-                text-align: center;
+                text-align: left;
             }
 
             div.pagesGrid-item:nth-child(7) {
@@ -250,7 +292,7 @@
 
             div.pagesGrid-item-container {
                 display: grid;
-                width: 100%;
+                width: 90%;
                 padding-top: 10px;
             }
 
@@ -490,7 +532,7 @@
         }
 
         async function hentJson1() {
-            let url = "http://medicinolie.dk/kalklandet/wordpress/wp-json/wp/v2/kalklandet/126";
+            let url = "http://medicinolie.dk/kalklandet/wordpress/wp-json/wp/v2/stevns_naturcenter/264/";
             let jsonData = await fetch(url);
             indhold = await jsonData.json();
             console.log(indhold);
